# kopium

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile  overrides.example.yaml  release.toml  test.rs  test.yaml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
examples/: Cargo.toml  from-build-script.rs
examples/build-script/: Cargo.toml  README.md  build.rs  stripped-down-crds.yaml
examples/build-script/src/: crds.rs  lib.rs
examples/build-script/src/crds/: alertmanager.rs  alertmanagerconfig.rs  podmonitor.rs  probe.rs  prometheus.rs  prometheusagent.rs  prometheusrule.rs  scrapeconfig.rs  servicemonitor.rs  thanosruler.rs
examples/shell-script/: .gitignore  Cargo.toml  README.md  justfile
examples/shell-script/src/: crds.rs  lib.rs
examples/shell-script/src/crds/: podmonitor.rs  scrapeconfig.rs  servicemonitor.rs
src/: analyzer.rs  derive.rs  lib.rs  main.rs  output.rs  overrides.rs  version.rs
tests/: agent-crd.yaml  agent.yaml  agentshift.yaml  app.yaml  applications.argoproj.io.yaml  cert.yaml  certificates.cert-manager.io.yaml  ciliumnetpol-broken.yaml  ciliumnetpol-crd.yaml  ciliumnetpol-working.yaml  cluster-crd.yaml  destinationrule-crd.yaml  destinationrule.yaml  generate_runner_bindings.rs  httproute.yaml  mv-crd.yaml  mv.yaml  podmon.yaml  podmonitors.monitoring.coreos.com.yaml  prometheusrules.monitoring.coreos.com.yaml  runner.rs  server-crd.yaml  server.yaml  serverauth-crd.yaml  serverauth.yaml  servicemon-crd.yaml  servicemon.yaml  servicemonitors.monitoring.coreos.com.yaml  servicemonmin-crd.yaml  servicemonmin.yaml  trycmd_tests.rs  wf.yaml
tests/cmd/generate/: from-file-with-auto.md  from-file-with-derive-default.md  from-file-with-derive-enum-only.md  from-file-with-derive-partialeq.md  from-file-with-docs.md  from-file-with-smart-derive-elision.md  from-file.md
tests/cmd/generate/crds/: apis.apigatewayv2.services.k8s.aws.yaml  argocdexports.argoproj.io.yaml  authorizers.apigatewayv2.services.k8s.aws.yaml  externalsecrets.external-secrets.io.yaml  postgresqls.acid.zalan.do.yaml
tests/cmd/help/: help.md
