[package]
name = "kopium"
description = "kubernetes openapi unmangler"
version = "0.21.3"
edition = "2021"
authors = [
    "clux <sszynrae@gmail.com>",
]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/kube-rs/kopium"
keywords = ["kubernetes", "openapi"]
categories = ["command-line-utilities", "parsing"]
default-run = "kopium"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/kopium-{ target }{ archive-suffix }"
bin-dir = "kopium-{ target }/{ bin }{ format }"

[[bin]]
doc = false
name = "kopium"
path = "src/main.rs"

[lib]
name = "kopium"
path = "src/lib.rs"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = "4.5"
env_logger = "0.11.6"
heck = "0.5.0"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["derive"] }
libc = "0.2.175"
log = "0.4.27"
quote = "1.0.40"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
syn = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
typed-builder = "0.21.1"

[dev-dependencies]
k8s-openapi = { version = "0.25.0", features = ["latest", "schemars"] }
schemars = "0.8.22"
