[package]
name = "kopium"
description = "kubernetes openapi unmangler"
version = "0.22.3"
edition = "2021"
authors = [
    "clux <sszynrae@gmail.com>",
]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/kube-rs/kopium"
keywords = ["kubernetes", "openapi"]
categories = ["command-line-utilities", "parsing"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/kopium-{ target }{ archive-suffix }"
bin-dir = "kopium-{ target }/{ bin }{ format }"

[[bin]]
doc = false
name = "kopium"
path = "src/main.rs"

[lib]
name = "kopium"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
log = "0.4.28"
env_logger = "0.11.6"
serde_json = "1.0.143"
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = "4.5"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
heck = "0.5.0"
syn = "2.0.106"
libc = "0.2.175"
regex = "1.11.2"

[dependencies.k8s-openapi]
version = "0.26.0"
features = ["latest"]

[dependencies.kube]
version = "2.0.1"
features = ["derive"]

[dev-dependencies]
schemars = "1.0.4"
trycmd = { version = "0.15.10" }
typed-builder = "0.21.2"

[dev-dependencies.k8s-openapi]
version = "0.26.0"
features = ["latest", "schemars"]
