[package]
name = "kopium"
description = "kubernetes openapi unmangler"
version = "0.22.5"
edition = "2021"
authors = [
    "clux <sszynrae@gmail.com>",
]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/kube-rs/kopium"
keywords = ["kubernetes", "openapi"]
categories = ["command-line-utilities", "parsing"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/kopium-{ target }{ archive-suffix }"
bin-dir = "kopium-{ target }/{ bin }{ format }"

[[bin]]
doc = false
name = "kopium"
path = "src/main.rs"

[lib]
name = "kopium"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:env_logger",
]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5", features = ["cargo", "derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
env_logger = { version = "0.11.8", optional = true }
heck = "0.5.0"
k8s-openapi = { version = "0.26.1", features = ["latest"] }
kube = { version = "2.0.1", features = ["derive"] }
libc = "0.2.181"
log = "0.4.29"
quote = "1.0.44"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
strum = { version = "0.28.0", features = ["derive"] }
syn = "2.0.114"
tokio = { version = "1.49.0", features = ["full"] }
typed-builder = "0.23.2"

[dev-dependencies]
env_logger = "0.11.8"
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
schemars = "1.2.0"
trycmd = "0.15.11"
